Osmosys now replaces  'Im Browser lesen' link with link to WP article
adds mc:edit="view_in_browser_link_1" with MC merge tag *|ARCHIVE|* that is replaced by Osmosys

--- a/style-guide.html
+++ b/style-guide.html
@@ -2792,8 +2792,8 @@ zrv1zQ1LoqH3CFef14eyxoNe3eK7czeVEFG3Tzr8TiQsTgL3M6fStvsBCvUB9wbOuf8CV2BQPQ3e
             <tr>
               <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                 
-      <div style="font-family:FranziskaWebPro,Georgia,Palatino,Palatino Linotype,FreeSerif,serif;font-size:14px;line-height:24px;text-align:center;color:#696969;">
-        <a href="[[PERMALINK]]" class="link--undercover" style="color: inherit;">Im Browser lesen</a>
+      <div mc:edit="view_in_browser_link_1" style="font-family:FranziskaWebPro,Georgia,Palatino,Palatino Linotype,FreeSerif,serif;font-size:14px;line-height:24px;text-align:center;color:#696969;">
+        <a href="*|ARCHIVE|*" class="link--undercover" style="color: inherit;">Im Browser lesen</a>
       </div>
     
               </td>
