add social share links for demonstration purposes to Facebook, and...
...Twitter and LinkedIn

--- a/style-guide.html
+++ b/style-guide.html
@@ -2794,6 +2794,9 @@ zrv1zQ1LoqH3CFef14eyxoNe3eK7czeVEFG3Tzr8TiQsTgL3M6fStvsBCvUB9wbOuf8CV2BQPQ3e
                 
       <div mc:edit="view_in_browser_link_1" style="font-family:FranziskaWebPro,Georgia,Palatino,Palatino Linotype,FreeSerif,serif;font-size:14px;line-height:24px;text-align:center;color:#696969;">
         <a href="*|ARCHIVE|*" class="link--undercover" style="color: inherit;">Im Browser lesen</a>
+        <a href="*|SHARELINK:Facebook|*" class="link--undercover" style="color: inherit;">Facebook</a>
+        <a href="*|SHARELINK:Twitter|*" class="link--undercover" style="color: inherit;">Twitter</a>
+        <a href="*|SHARELINK:Linkedin|*" class="link--undercover" style="color: inherit;">Linkedin</a>
       </div>
     
               </td>
