--- a/style-guide.html
+++ b/style-guide.html
@@ -414,8 +414,8 @@ zrv1zQ1LoqH3CFef14eyxoNe3eK7czeVEFG3Tzr8TiQsTgL3M6fStvsBCvUB9wbOuf8CV2BQPQ3e
             <tr>
               <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                 
-      <div style="font-family:FranziskaWebPro,Georgia,Palatino,Palatino Linotype,FreeSerif,serif;font-size:16px;font-style:italic;line-height:24px;text-align:center;color:#696969;">
-        Eine Kolumne von Marcel Fratzscher
+      <div mc:edit="byline" style="font-family:FranziskaWebPro,Georgia,Palatino,Palatino Linotype,FreeSerif,serif;font-size:16px;font-style:italic;line-height:24px;text-align:center;color:#696969;">
+        *|YB:ZO:BYLINE|*
       </div>
     
               </td>
