--- a/style-guide.html
+++ b/style-guide.html
@@ -11,7 +11,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style type="text/css">
-          img { max-width: 100% !important; }
+          img { max-width: 550px !important; }
+          figure { margin: 0 !important; }
           #outlook a { padding:0; }
           .ReadMsgBody { width:100%; }
           .ExternalClass { width:100%; }
