replace logo data:image/png;base64 with a URL for outlook

--- a/style-guide.html
+++ b/style-guide.html
@@ -171,53 +171,7 @@
           <tr>
             <td style="width:200px;">
               
-      <img alt="ZEIT ONLINE Logo" height="auto" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOsAAAAZCAYAAADQUNnHAAAACXBIWXMAAAsSAAALEgHS3X78AAAJ
-/klEQVR4nO1c7Y3jOBLlDva/lYF1EbQugtZFMLoIWhvB6CIYbQSrjmDcEawmglVHsHIGdgZyBD7o
-8F7joY6URH+Ne9AFCLZpskjWN4sUfzkej04gc84l+Nk75wb3AT4YaVQ65yrQqHbOtVKvML8r0Lac
-qJOgLHfOdc65zQUpnwFvYsp79PXB5/cAo7LiSY+nww44Snw/B1IZ0/hkM7gaqZscj8fhxL53pt/Q
-U6OPwfS1kfpjeYe5pIK/xBg3KEtl3L3g6vAUC8cUeirDj04eO3ZLdz5NgKYDeDM3htLMjdDjvyVy
-M9aNmXMIBtOnb1xH4FjSl6Uj+UyZzC6gD2801o43plKPTseB53gKMyhCbhSmFRy91OFTQuhbz2Tr
-AMMJrXy3wlIaXC3GzzFwjj3KO1O/XMigDLhs+1oMRikC2eO/GjSlApCmrcFToXypAbFP7lFSnzJW
-hv5NAF9i5IO4B/y31MgRNoE+lA7k2VLFCclyPzPWQmigyrvUUKoz2QX68I0nN3pVo57VhzdaKaFY
-qZ2xspz4Tur7hOUoVvy4wPoSX0hA2bcy3dYhjt4ocmfadmas/UzfPuYMRmgJrVjXDr8LtKtRRu/c
-SDuL4xjpUUIGy6cYdj7adzehgBzXztB6icIm0kdIvnIzjmOEMbBPb/B0E3XpjS1Pl0QO2lfI2Gee
-eU3hK3xG5hMi9Qqf/8a6aeeJ4Md1zxd8H9c6a+fcQdqeAxvgfwHe0oNrbl2Vo+0LcPULx9Mt6Fth
-xLvF7zU+V6DF3jmXgn4d1ojjerbB717WjTv0O8J30wfLm4VzIIy8+4axcDxz/OkxRoc2jxPrZZav
-wY+x/sPCcQ4yLp98TbU7BWLacfwrfO7xvfWs833QoSw0r6WySGghA79jHCNf35SViY12AgEntAVD
-WRZD+CkYoCgvCxTGB+e0dWj32wLhLjDWBkwlcPwpmFNBkFsws0ObFPVooP6D+ivBlUCoi4jxp6JM
-xFcuFNpGBPTVOfc5QAfF9QDej+N8EoWfgv4Ewb01qCFaiyJOwbUSdDVk8n+0/QQm1zNELKGgB7E0
-+4UMigUKWBrZLruAl9+AOaG+E9SpMHedPzOrFSIQ0stB6TKpOwrBH6LAavCe0U8CA7p0TjWUbYu+
-9gsFjWC9Yz3hVV7x+SBy8/UMQ3kvsAXd1BA9RGTmY+i9FCiT2ScMasqjJsLInYR+12RMKBSfguxC
-Fq6a6LuAQvQS7tr/U1HSAfRbgW5r04ZhMj3oQQxFjrpL6JzCuznxqlM89QEFLYUyrib67mDxHYwS
-lwWNMUrvDQbw4iAK60DbSyz3ToWRD/2nBY1rWZPR0r5cyYrcI3TiQRN4PgcCdhIK5yjLxWisTXjr
-IAROFFr3tlcQeCrvRpQ3hcDkHhqx/l5wxSorPeRavk8Zio3QIoXCrmSt/l6hF3o+iCH6I3JZcnGY
-U9ZrJpVsP/eq/ClCPHp7hkSJhN4HjD+Hp1nP4HQQ7EesDx282YskfHooripOFfBcVOBOvp+yNqRg
-0tg8zChehTGvUG//kyisRg6p0GVzo8gh80V3c8rqSyrVF1xQc73894VP7FwSWghhZrLMjTCPXmwF
-Jv/DOfeLMHyL3/qMdf6J/3egaYfvSmPSvYQC+DxmKnjoyU/hka/NnHBWmB8N1D4iQ3zPwMhhJUub
-mAzxKZBM6cOvEwgLT1JpewYTrOdMJCTc37GyVpLwUWHe4b9WngSMTfAfBXmAkpei7Go5mar/Bk+l
-Cskwe1SGfwXW06TjpTLzMTDAmzPy2mL+T2J43itUMpc95rqWCOYcp+WLJGmYDz49C3lWTSp1YjUv
-Gf4Osm77EUK2FBJJ9ljmVFKeSGicm3VuBoWyWeZcPgt44iezVuzMuvUewSZmfqYMsUYOSeTecixo
-YvL/DEFIWSuxkgyDns9cV+aeJ8E+42MgcXIPoJlwDX8as7VSSwaxkXCJGeDfPSEstwe+oG0HOn8z
-ByMalIeyrXtP2a1BEzOPsr3zM2SIc1mPU4mW7i2HYEofEp+R8ykrEypO3P7hiuFMg/DuHsMlZmZL
-URqHsi+SEc4Qxu+lTinKmQTmt8PDrCqV/7u05akn1vUlbxiZnOt5GYYp/phEld3SeZWE071GBUtA
-I4e1JJyuETlYJ/AGPmXl2vFVLGJ1xVMazmQx7wVSKGQlp4NIg0Kijlwig8GE9KUcYzzKQQplsB4A
-qWTNm4jSlGZbyIZgVKhMBCmWnhzDVr7vT+C7bulksqVzzcTMLcBu6TCauUbk0PtwWmUtzMkbHj+7
-1+TPNSGVc6yZUZDc837qgyR6FEoI7BaW+CvCXKUpt292osyd4E8lDO/kAASBy5PcKG4MUBB7GU/s
-Xi1Bt3RSyRD76POeQCMH3ar6fIs5qLLapBJDormkUnIFZa7uIGyiR9nIgQQHoaZC0FvwIP424NFa
-4HgBg7fmCOJWMuKJhLtU1lzo/ORZo7YiOPResRv47Muuy0+FSryqEwdwLchv5FR0S2d9o3xByeOG
-hFBSaWrNQkt/yQMNDPl+dIa4l3EoDSjUlXjdz3J6KBTqKY5EPlM8aznNlMm2AZWO+7yHwDqpkXp8
-e2apwcvh9V7FSzx7eBATxmpiZi3JtGtAJttntwBGDreAkodkqKy+pNLcQf1czsheyqLVCBHvZUO9
-lWtWBvGyJQQkRfnLzPZWJwZwI2tbPWbohI6FXBXzp7zJk4iBtNBA2dYmKpgDeuyDWbf6eB8bWtst
-HXv08hJQCH9OVVbOK8YY2cMgU3DqWr3SJROVNSapxFfp/sJAfYoVOzh6sK9g7K0s5BwUcsxvJwml
-QTyg3lXVi/ArDTrxlFT+FvU41620Ib5KkjX0slPLksII0KNnLAqp7KOvJLIKbfjrSwZLoY/ImMYs
-fUjHPzH2cxwG+41ZU2vkMAen5A96nEd2nNuvklQi8NB+ZjpJ5QVvBausiTkQQLAMzoGzMBZ34xEU
-3XfSMZULmJRIGzLFHh0MQQqCPZuXylNRuNokdXgyixei7eQYYSd0pGB8kQQMcXGN2oA2z/g/A14f
-jZwIUC1nup9Q1pj50hAp7b9PvAObmH1U31tHIWiRmPk2w6fK/HYeDx+SQ5WDzOMtp3iuxqSKiOwG
-8eyhqMFu23E8IX2wc3t5o/OZFzrZK0PKMy4sI/guTJvCOXVtydR4hpk7lxJcwTFFH9+FWUcpG8yF
-Y73n3iYfTotHy3cTdyXpkwbu9PGNdWPu0fJdqWPpMMxcleJ7NoE258pNa3BNQWnq+i5N6yKudNHr
-aHzXuZx7YdobX+xVpB/gt4y6hcK3bx7lrPROLKV6B82EhizvXpJYjXjBQQ5C8Owwv8fufWYSghO4
-zrv1zQ1LoqH3CFef14eyxoNe3eK7czeVEFG3Tzr8TiQsTgL3M6fStvsBCvUB9wbOuf8CV2BQPQ3e
-2cYAAAAASUVORK5CYII=" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;" width="200">
+      <img alt="ZEIT ONLINE Logo" height="auto" src="https://gallery.mailchimp.com/ccc1d25b47224d2da432dcbaf/images/6025ea29-d302-4afe-9f02-5516449b4848.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;" width="200">
     
             </td>
           </tr>
