changed mailjet footer merge tags to mailchimp syntax

--- a/style-guide.html
+++ b/style-guide.html
@@ -280,7 +280,7 @@
                       <tr>
                         <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">   
                           <div style="font-family:TabletGothic,Helvetica Neue,Helvetica,Arial,FreeSans,sans-serif;font-size:13px;line-height:24px;text-align:center;color:#696969;">
-                            Bitte antworten Sie nicht direkt auf diese E-Mail. Sie sind auf der liste dieses ZEIT ONLINE-Newsletters angemeldet als: <span class="link--undercover" style="color: inherit;">[[EMAIL_TO]]</span> Um sich von der Liste abzumelden, <a href="[[UNSUB_LINK_DE]]" alt="hier klicken zum abmelden!" class="link--undercover" style="color: inherit;">klicken Sie bitte hier</a>
+                            Bitte antworten Sie nicht direkt auf diese E-Mail. Sie sind auf der liste dieses ZEIT ONLINE-Newsletters angemeldet als: <span class="link--undercover" style="color: inherit;">*|EMAIL|*</span> Um sich von der Liste abzumelden, <a href="*|UNSUB|*" alt="hier klicken zum abmelden!" class="link--undercover" style="color: inherit;">klicken Sie bitte hier</a>
                           </div>
                         </td>
                       </tr>          
